# gambatte-core

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: test.yml
cmake/: GetAvailableCompileFlags.cmake  config.h.in  libgambatte-config.cmake.in  libgambatte.pc.in
cmake/test/: CMakeLists.txt  main.cpp
common/: clamp.h
common/videolink/: vfilterinfo.cpp
common/videolink/vfilters/: sgbborder.cpp  sgbborder.h
libgambatte/: Makefile  SConstruct  crash-f52e9ded13bd8f83fafc966a162e90aa6c4b0b88  timeout-1b879f8d3b7f32efc0b59da56d8358235522fa61  timeout-26b37fa1de655d7468c9a71e37415d40742258a8  timeout-4639900db9ad818fe1bb2d80e9a334c4fae5754d  timeout-486b585b32af1e5f5861b02c202a371eb7537a0a  timeout-c9bdcd977b57ea532e1174d0445a6ea9085d501c
libgambatte/include/: fptrs.h  gambatte-c.h  gambatte.h  gbcallback.h  gbexport.h  gbint.h  inputgetter.h  loadres.h  newstate.h  pakinfo.h
libgambatte/roms/states/: Bomberman Collection (J) [S]_1.gqs  Bomberman Collection (J) [S]_2.gqs  Bomberman Collection (J) [S]_3.gqs  Gameboy Camera Gold - Zelda Edition (U) [S]_1.gqs  Gameboy Camera Gold - Zelda Edition (U) [S]_2.gqs  Gameboy Camera Gold - Zelda Edition (U) [S]_3.gqs  Hugo (E) [S]_1.gqs  Hugo (E) [S]_2.gqs  Hugo (E) [S]_3.gqs  Kanji Boy 2 (J) [C][!]_1.gqs  Kanji Boy 2 (J) [C][!]_2.gqs  Kanji Boy 2 (J) [C][!]_3.gqs  Pokemon - Gold Version (UE) [C][!]_1.gqs  Pokemon - Gold Version (UE) [C][!]_2.gqs  Pokemon - Gold Version (UE) [C][!]_3.gqs  Pokemon Card GB (J) [C][!]_1.gqs  Pokemon Card GB (J) [C][!]_2.gqs  Pokemon Card GB (J) [C][!]_3.gqs  Robopon - Sun Version (U) [C][!]_1.gqs  Robopon - Sun Version (U) [C][!]_2.gqs  Robopon - Sun Version (U) [C][!]_3.gqs  Tetris (W) (V1.0) [!]_1.gqs  Tetris (W) (V1.0) [!]_2.gqs  Tetris (W) (V1.0) [!]_3.gqs  X - Xekkusu (J) [!]_1.gqs  X - Xekkusu (J) [!]_2.gqs  X - Xekkusu (J) [!]_3.gqs
libgambatte/src/: bess.cpp  bess.h  cinterface.cpp  cinterface.h  cpu.cpp  cpu.h  gambatte.cpp  initstate.cpp  initstate.h  interrupter.cpp  interrupter.h  interruptrequester.h  loadres.cpp  mem_dumps.h  memory.cpp  memory.h  savestate.h  sound.cpp  sound.h  state_fuzzer.cpp  statesaver.cpp  tima.cpp  video.cpp  video.h
libgambatte/src/file/: crc32.cpp  crc32.h
libgambatte/src/file/unzip/: crypt.h  ioapi.c
libgambatte/src/mem/: camera.cpp  camera.h  cartridge.cpp  cartridge.h  huc3.cpp  huc3.h  huc3_chip.cpp  huc3_chip.h  infrared.cpp  infrared.h  ipl.h  memptrs.cpp  memptrs.h  pakinfo.cpp  pakinfo_internal.h  remote.cpp  remote.h  rtc.cpp  rtc.h  sgb.cpp  sgb.h  spc_data.h  tama6.cpp  tama6.h  time.cpp  time.h
libgambatte/src/mem/mbc/: huc1.cpp  huc3.cpp  m161.cpp  mbc.h  mbc0.cpp  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  mmm01.cpp  pocket_camera.cpp  wisdom_tree.cpp
libgambatte/src/mem/snes_spc/: SNES_SPC.cpp  SNES_SPC.h  SNES_SPC_misc.cpp  SPC_CPU.h  SPC_DSP.cpp  SPC_DSP.h  blargg_common.h  spc.h
libgambatte/src/sound/: channel1.cpp  channel1.h  channel2.cpp  channel2.h  channel3.cpp  channel3.h  channel4.cpp  channel4.h  duty_unit.cpp  duty_unit.h  envelope_unit.cpp  envelope_unit.h
libgambatte/src/video/: mstat_irq.h  ppu.cpp  ppu.h
scripts/: .copy_bizhawk_after_build.sh  build_shlib.sh  clean.sh  rebuild_shlib.sh
test/: CMakeLists.txt  testcapi.c
